syntax = "proto3";

option go_package = "githib.com/regentmarkets/segmented";


package hub;

service ServiceHub {
    rpc CallHTTP (stream CallHTTPRequest) returns (stream CallHTTPResponse);
    rpc RelayHTTP (stream CallHTTPResponse) returns (stream CallHTTPRequest);
}

message CallHTTPRequest {
    string method = 1;
    string url = 2;
    map<string, string> headers = 3;
    string body = 4;
}

message CallHTTPResponse {
    int32 statusCode = 1;
    map<string, string> headers = 2;
    string body = 3;
}
